# afrika

./: .gitignore  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  README.md  Settings.cpp  Settings.h  main.cpp
src/: main.cpp
src/storage/: SessionStorage.cpp  SessionStorage.h  Settings.cpp
src/ui/: BrowserWindow.cpp  BrowserWindow.h  BrowserWindowMenu.cpp  BrowserWindowNavigation.cpp  BrowserWindowSession.cpp  BrowserWindowTabs.cpp  UIStyleSheet.cpp  UIStyleSheet.h  UIStyleSheetDialogs.cpp  UIStyleSheetTabs.cpp  UIStyleSheetToolbar.cpp  UITheme.h
src/utils/: UrlUtils.cpp  UrlUtils.h
