cmake_minimum_required(VERSION 3.16)
project(SimpleBrowser)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 COMPONENTS Widgets WebEngineWidgets REQUIRED)
add_executable(SimpleBrowser main.cpp BrowserWindow.cpp Settings.cpp)
target_link_libraries(SimpleBrowser PRIVATE Qt6::Widgets Qt6::WebEngineWidgets)
